Source/WebCore/history/PageCache.h
@@ -60,6 +60,11 @@ namespace WebCore {
 
         void markPagesForVistedLinkStyleRecalc();
 
+#if USE(ACCELERATED_COMPOSITING)
+        bool shouldClearBackingStores() const { return m_shouldClearBackingStores; }
+        void setShouldClearBackingStores(bool flag) { m_shouldClearBackingStores = flag; }
+#endif
+
     private:
         typedef HashSet<RefPtr<CachedPage> > CachedPageSet;
 
@@ -85,6 +90,10 @@ namespace WebCore {
         
         Timer<PageCache> m_autoreleaseTimer;
         CachedPageSet m_autoreleaseSet;
+
+#if USE(ACCELERATED_COMPOSITING)
+        bool m_shouldClearBackingStores;
+#endif
      };
 
     // Function to obtain the global page cache.
