Source/WebCore/page/FrameView.h
@@ -112,6 +112,9 @@ public:
     void updateCompositingLayers();
     bool syncCompositingStateForThisFrame();
 
+    void clearBackingStores();
+    void restoreBackingStores();
+
     // Called when changes to the GraphicsLayer hierarchy have to be synchronized with
     // content rendered via the normal painting path.
     void setNeedsOneShotDrawingSynchronization();
